style.css
* {
	font-family: Georgia, serif;
	color: #333;
	font-weight: normal;
}

h1, h3 {
	text-align: center;
}

h1, h2 {
	margin-top: 0.75em;
}

h1 {
	margin-bottom: 0em;
}

h1 {
	font-size: 2.25em;
}

h2 {
	font-size: 2em;
}

h3 {
	font-size: 0.5em;
}

main h3 {
	font-size: 1.4em;
	text-align: left;
	margin-top: 1em;
	margin-bottom: 0;
}

p {
	font-size: 1em;
}

body {
	overflow-x: hidden;
}

@media only screen and (min-width: 601px) {
	body {
		margin: auto;
		width: 35em;
	}
}

h1 a, h3 a {
	text-decoration: none;
	color: inherit;
}

main a {
	text-decoration: none;
	color: #002A53;

}

strong {
	font-size: 1.25em;
}

a:hover {
	color: #53002a;
}

html {
	padding-bottom: 100px;
	overflow-x: hidden;
}

.flex-container {
	justify-content: center;
	display: flex;
}

.flex-container > div {
	margin: 0px;
	padding: 0px 20px;
	font-size: 30px;
}

img {
	max-width: 90%;
	margin: auto;
	display: block;
	border-radius: 1em;
	border-width: 0.1em;
	border-color: black;
	border-style: solid;
}

.frame-outer {
	border: 1px solid #333;
	padding: 2em;
	position: relative;
	background-image: url('/BK-NM-475.webp');
	background-size: cover;
	background-position: center 12.5%;
	width: 100vw;
	position: relative;
	left: 50%;
	transform: translateX(-50%);
}
.frame-inner {
	border: 1px solid #333;
	padding: 1em 1em 0.5em;
	position: relative;
	z-index: 1;
	background: white;
	width: fit-content;
	margin: auto;
}
.frame-inner h1 {
	margin-top: 0;
}
.frame-svg {
	position: absolute;
	inset: 0;
	width: 100%;
	height: 100%;
}

table {
	border-collapse: collapse;
	width: 100%;
	font-size: 0.85em;
}

th, td {
	border: 1px solid #ccc;
	padding: 6px 10px;
	text-align: left;
}

th {
	background-color: #f5f5f5;
}

